--- a/PrecisionClock.ioc
+++ b/PrecisionClock.ioc
@@ -46,6 +46,8 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true
+PA10.GPIOParameters=GPIO_PuPd
+PA10.GPIO_PuPd=GPIO_PULLDOWN
 PA10.Locked=true
 PA10.Signal=GPXTI10
 PA13.GPIOParameters=GPIO_Label
@@ -175,8 +177,8 @@ SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_SLAVE
 SPI2.VirtualType=VM_SLAVE
 TIM3.IPParameters=Prescaler,Period
-TIM3.Period=0
-TIM3.Prescaler=191
+TIM3.Period=999
+TIM3.Prescaler=71
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
