--- a/PrecisionClock.ioc
+++ b/PrecisionClock.ioc
@@ -12,7 +12,7 @@ Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB15
+Mcu.Pin10=PB14
 Mcu.Pin11=PA10
 Mcu.Pin12=PA13
 Mcu.Pin13=PA14
@@ -25,8 +25,8 @@ Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
-Mcu.Pin8=PB13
-Mcu.Pin9=PB14
+Mcu.Pin8=PB12
+Mcu.Pin9=PB13
 Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -81,12 +81,12 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PB13.Mode=Full_Duplex_Slave
+PB12.Mode=NSS_Signal_Hard_Input
+PB12.Signal=SPI2_NSS
+PB13.Mode=Simplex_Bidirectional_Slave
 PB13.Signal=SPI2_SCK
-PB14.Mode=Full_Duplex_Slave
+PB14.Mode=Simplex_Bidirectional_Slave
 PB14.Signal=SPI2_MISO
-PB15.Mode=Full_Duplex_Slave
-PB15.Signal=SPI2_MOSI
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -172,9 +172,10 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI2.CalculateBaudRate=1.125 MBits/s
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI2.Direction=SPI_DIRECTION_1LINE
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,VirtualNSS
 SPI2.Mode=SPI_MODE_SLAVE
+SPI2.VirtualNSS=VM_NSSHARD
 SPI2.VirtualType=VM_SLAVE
 TIM3.IPParameters=Prescaler,Period
 TIM3.Period=999
