--- a/PrecisionClock.ioc
+++ b/PrecisionClock.ioc
@@ -13,12 +13,13 @@ Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PB14
-Mcu.Pin11=PA10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB3
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin11=PB15
+Mcu.Pin12=PA10
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB3
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
@@ -27,7 +28,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PB12
 Mcu.Pin9=PB13
-Mcu.PinsNb=17
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -83,10 +84,12 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PB12.Mode=NSS_Signal_Hard_Input
 PB12.Signal=SPI2_NSS
-PB13.Mode=Simplex_Bidirectional_Slave
+PB13.Mode=Full_Duplex_Slave
 PB13.Signal=SPI2_SCK
-PB14.Mode=Simplex_Bidirectional_Slave
+PB14.Mode=Full_Duplex_Slave
 PB14.Signal=SPI2_MISO
+PB15.Mode=Full_Duplex_Slave
+PB15.Signal=SPI2_MOSI
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -172,7 +175,7 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI2.CalculateBaudRate=1.125 MBits/s
-SPI2.Direction=SPI_DIRECTION_1LINE
+SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,VirtualNSS
 SPI2.Mode=SPI_MODE_SLAVE
 SPI2.VirtualNSS=VM_NSSHARD
