--- a/PrecisionClock.ioc
+++ b/PrecisionClock.ioc
@@ -12,23 +12,24 @@ Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB14
-Mcu.Pin11=PB15
-Mcu.Pin12=PA10
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PB13
+Mcu.Pin11=PB14
+Mcu.Pin12=PB15
+Mcu.Pin13=PA10
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB3
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
-Mcu.Pin8=PB12
-Mcu.Pin9=PB13
-Mcu.PinsNb=18
+Mcu.Pin8=PB0
+Mcu.Pin9=PB12
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -36,6 +37,7 @@ MxCube.Version=4.26.1
 MxDb.Version=DB.4.0.261
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:true
@@ -45,10 +47,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true
-PA10.GPIOParameters=GPIO_PuPd
-PA10.GPIO_PuPd=GPIO_PULLDOWN
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA10.GPIO_Label=GPS_RST
+PA10.GPIO_PuPd=GPIO_NOPULL
 PA10.Locked=true
 PA10.Signal=GPXTI10
 PA13.GPIOParameters=GPIO_Label
@@ -82,6 +84,10 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=LORA_INPUT
+PB0.Locked=true
+PB0.Signal=GPXTI0
 PB12.Mode=NSS_Signal_Hard_Input
 PB12.Signal=SPI2_NSS
 PB13.Mode=Full_Duplex_Slave
@@ -169,6 +175,8 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
@@ -181,8 +189,8 @@ SPI2.Mode=SPI_MODE_SLAVE
 SPI2.VirtualNSS=VM_NSSHARD
 SPI2.VirtualType=VM_SLAVE
 TIM3.IPParameters=Prescaler,Period
-TIM3.Period=999
-TIM3.Prescaler=71
+TIM3.Period=39999
+TIM3.Prescaler=8
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
